# sleep-app

./: .gitignore  LICENSE  README.md  main.py  ollama  package-lock.json  package.json  pyproject.toml
Front-prog/sleep-app-front/: package-lock.json  package.json
Front-prog/sleep-app-front/src/: App.vue  main.js  style.css
Front-prog/sleep-app-front/src/assets/: SignIn-style.css
Front-prog/sleep-app-front/src/router/: index.js
Front-prog/sleep-app-front/src/views/: SignIn.vue
assets/: Health_Sleep_Statistics.csv  brand.md
backend/: main.py  pyproject.toml
dev-ui/: package-lock.json  package.json  svelte.config.js
dev-ui/src/routes/: +page.svelte
dev-ui/src/routes/404/: +page.svelte
dev-ui/src/routes/about-us/: +page.svelte
dev-ui/src/routes/app/: +page.svelte
dev-ui/src/routes/sign-in/: +page.svelte
dev-ui/src/routes/sign-up/: +page.svelte
dev-ui/src/styles/: shared_global.css  shared_reg_log.css
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/types/: route_meta_data.json
frontend/src/: App.vue
frontend/src/router/: index.js
frontend/src/routes/: +page.svelte
frontend/src/routes/about-us/: +page.svelte
frontend/src/routes/app/: +page.svelte
frontend/src/routes/sign-in/: +page.svelte
frontend/src/routes/sign-up/: +page.svelte
frontend/src/styles/: SignIn-style.css  shared_global.css  shared_reg_log.css  vars.css
frontend/src/views/: AboutUs.vue  AccountOverview.vue  Home.vue  SignIn.vue  SignUp.vue
(+3 files in other folders)
